implementacao do teste para endpoint findall da classe user resource